manifests/blog/blog-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  type: ClusterIP
  selector:
    app: blog
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
