manifests/blog/blog-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog
spec:
  rules:
  - host: blog.mt165.co.uk
    http:
      paths:
      - backend:
          serviceName: blog
          servicePort: http
